ndb - bug#60484 - also rename blob tables when changing db/schema